<resources>
    <string name="app_name">富邦Live</string>
    <string name="bottom_radio_mine">我的</string>
    <string name="bottom_radio_look">关注</string>
    <string name="bottom_radio_direct">附近</string>
    <string name="bottom_radio_head">首页</string>


    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="start">Start</string>

    <string name="hw_codec_camera_streaming_txt">HW Codec Camera Streaming</string>
    <string name="sw_codec_camera_streaming_txt">SW Codec Camera Streaming</string>
    <string name="pure_audio_streaming_txt">Audio Streaming</string>
    <string name="screen_recorder_streaming_txt">Screen Recorder Streaming</string>
    <string name="ext_cap_streaming_txt">Ext Capture Streaming</string>

    <string name="string_state_ready">READY</string>
    <string name="string_state_preparing">PREPARING</string>
    <string name="string_state_connecting">CONNECTING</string>
    <string name="string_state_streaming">STREAMING</string>
    <string name="string_state_netblocking">NETBLOCKING, STOPPING</string>
    <string name="string_state_con_timeout">CONNECTION TIMEOUT</string>
    <string name="title_activity_audio_streaming">AudioStreamingActivity</string>

    <string name="flash_light_on">ON</string>
    <string name="flash_light_off">OFF</string>

    <string name="cd_et_input_url">cd_et_input_url</string>
    <string name="cd_btn_hw_codec">cd_btn_hw_codec</string>
    <string name="cd_btn_sw_codec">cd_btn_sw_codec</string>
    <string name="cd_btn_pure_audio">cd_btn_pure_audio</string>
    <string name="cd_tv_version_info">cd_tv_version_info</string>
    <string name="cd_tv_log_info">cd_tv_log_info</string>
    <string name="cd_et_input_method">cd_et_input_method</string>
    <string name="cd_btn_camera_switcher">cd_btn_camera_switcher</string>
    <string name="cd_tv_stream_status">cd_tv_stream_status</string>
    <string name="cd_btn_torch">cd_btn_torch</string>
    <string name="cd_btn_capture">cd_btn_capture</string>
    <string name="cd_btn_orientation">cd_btn_orientation</string>
    <string name="cd_btn_mute">cd_btn_mute</string>
    <string name="cd_btn_fb">cd_btn_fb</string>
    <string name="cd_tv_streaming_state_hint">cd_tv_streaming_state_hint</string>
    <string name="cd_shutter_button">cd_shutter_button</string>
    <string name="cd_btn_screen_recorder">cd_btn_screen_recorder</string>
    <string name="cd_btn_ext_cap">cd_btn_ext_cap</string>
    <string name="cd_preview_mirror">cd_preview_mirror</string>
    <string name="cd_encoding_mirror">cd_encoding_mirror</string>
    <string name="buffering">加载中</string>
    <string name="net_error">网络错误</string>
    <string name="sending_request">请求中</string>
    <string name="auth_upmic">直播需要先通过实名认证</string>
    <string name="input_userid">请输入用户名</string>
    <string name="input_userpwd">请输入密码</string>
    <string name="please_select_a_gift">请选择一种礼物</string>
    <string name="please_select_a_gift_num">请填写礼物数量</string>
    <string name="kickout">您被踢出房间</string>
    <string name="auth_name_about">根据相关法规，开直播需要实名认证\n实名认证不涉及金钱账户\n认证信息我们会严格保密</string>
    <string name="auth_name_about_shrot">根据相关法规，开直播需要实名认证</string>
    <string name="submit">提交</string>
    <string name="in_room_time_out">登录房间超时</string>
    <string name="id_incorrect">身份证号码格式不正确</string>
    <string name="name_incorrect">姓名格式不对</string>
    <string name="up_auth_info_success">上传认证信息成功,请等待审核</string>
    <string name="up_auth_info_failure">上传认证信息失败</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="content_not_null">内容不能为空</string>
    <string name="modify_success">修改信息成功</string>
    <string name="modify_failed">修改信息失败</string>
    <string name="up_auth_pic_failure">上传用户头像失败</string>
    <string name="up_auth_pic_success">上传头像成功</string>
    <string name="unknow">未知</string>
    <string name="add_fav_success">关注成功！</string>
    <string name="delete_sucess">删除成功</string>
    <string name="delete_fail">删除失败</string>
    <string name="copy_success">富邦号复制成功</string>
    <string name="live_auth_info">直播既代表你同意主播协议</string>
    <string name="mirror_same">当前图像和观众一致</string>
    <string name="mirror_not_same">当前图像和观众相反</string>
    <string name="sure_to_quit_live">确认退出？</string>
    <string name="sure">确认</string>
    <string name="cancle">取消</string>
    <string name="come_room_first">        我们提倡绿色直播，封面和直播内容含吸烟、低俗、引诱、暴露等都将会被封停账号，同时禁止直播聚众闹事、集会，网警24小时在线巡查哦！</string>
    <string name="come_before">一道金光闪过</string>
    <string name="come_after">进入直播间</string>
    <string name="singer">好声音</string>
    <string name="talent">才艺</string>
    <string name="cool_boy">帅哥</string>
    <string name="cool_girl">美女</string>
    <string name="no_more_nk">金币不足</string>
    <string name="how_to_add_experience">开直播，看直播，就可获得经验</string>
    <string name="how_to_add_experience_more">不想等待，礼物刷起来，刷得越多，经验越快</string>
</resources>
