<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/common_head" />

    <TextView
        android:id="@+id/tv_type_is_first"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="@color/gray_dan"
        android:gravity="center"
        android:text="第一次直播请先选择直播类型" />

    <RadioGroup
        android:id="@+id/rg_gender"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="150dp"

            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/rb_type_talent"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/button_type_talent"
                android:button="@null"
                android:checked="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/talent" />

            <RadioButton

                android:id="@+id/rb_type_male"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="50dp"
                android:background="@drawable/button_type_male"
                android:button="@null" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"

                android:text="@string/cool_boy" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="150dp"

            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/rb_type_singer"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/button_type_singer"
                android:button="@null" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/singer" />

            <RadioButton
                android:id="@+id/rb_type_female"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="50dp"
                android:background="@drawable/button_type_female"
                android:button="@null" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/cool_girl" />
        </LinearLayout>
    </RadioGroup>
</LinearLayout>