<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.fubang.live.ui.MainActivity">

    <FrameLayout
        android:id="@+id/main_contaner"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="50dp"></FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:id="@+id/ll_main_home_page"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_main_home_page"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_marginTop="4dp"
                android:src="@drawable/home_pressed" />

            <TextView
                android:id="@+id/tv_main_home_page"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="@string/bottom_radio_head"
                android:textColor="@color/gray_main_text"
                android:textSize="10dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_main_home_ranking"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_main_home_ranking"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_marginTop="4dp"
                android:src="@drawable/follow" />

            <TextView
                android:id="@+id/tv_main_home_ranking"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="@string/bottom_radio_direct"
                android:textColor="@color/gray_main_text"
                android:textSize="10dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_main_home_favorite"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_main_home_favorite"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_marginTop="4dp"
                android:src="@drawable/ranking_list" />

            <TextView
                android:id="@+id/tv_main_home_favorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="@string/bottom_radio_look"
                android:textColor="@color/gray_main_text"
                android:textSize="10dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_main_home_mine"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_main_home_mine"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_marginTop="4dp"
                android:src="@drawable/me" />

            <TextView
                android:id="@+id/tv_main_home_mine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="@string/bottom_radio_mine"
                android:textColor="@color/gray_main_text"
                android:textSize="10dp" />
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>
